content/packer/v1.12.x/content/docs/community-tools.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Packer and the Packer logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/packer/blob/-/LICENSE

page_title: Download Packer Community Projects
description: >-
  Packer community contributors have built many Packer tools and projects that demonstrate Packer templates. Learn about Packer community projects you can download.
---

# Download Packer Community Projects

Packer has a vibrant community of contributors who have built a number of great
tools on top of Packer. There are also quite a few projects demonstrating the
power of Packer templates.

## Third-Party plugins

To learn more about how to use community plugins, or how to build your own,
refer to the docs on [extending Packer](/packer/docs/plugins/install)

If you have built a plugin and would like to add it to this community list,
make a pull request so that we can document your contribution.

Refer to the following topics to learn about plugins built by the community of Packer users and
vendors. We do not test or maintain community plugins.


- [Community Builders](/packer/docs/builders/community-supported)
- [Community Provisioners](/packer/docs/provisioners/community-supported)
- [Community Post-Processors](/packer/docs/post-processors/community-supported)


## Templates

- [bento](https://github.com/chef/bento) - Packer templates for building minimal
  Vagrant base boxes

- [boxcutter](https://github.com/boxcutter) - Community-driven templates and
  tools for creating cloud, virtual machines, containers and metal operating
  system environments

- [cbednarski/packer-ubuntu](https://github.com/cbednarski/packer-ubuntu) -
  Ubuntu LTS Virtual Machines for Vagrant

- [geerlingguy/packer-ubuntu-1604](https://github.com/geerlingguy/packer-ubuntu-1604)
  \- Ubuntu 16.04 minimal Vagrant Box using Ansible provisioner

- [jakobadam/packer-qemu-templates](https://github.com/jakobadam/packer-qemu-templates)
  \- QEMU templates for various operating systems

- [lucidone/baseliner](https://git.sr.ht/~lucidone/baseliner) - Example of using
  QEMU + Ansible with Packer

- [packer-build](https://github.com/tylert/packer-build) - Build fresh Debian
  and Ubuntu virtual machine images for Vagrant, VirtualBox and QEMU

- [packer-windows](https://github.com/joefitzgerald/packer-windows) - Windows
  Packer Templates

- [packer-baseboxes](https://github.com/taliesins/packer-baseboxes) - Templates
  for Packer to build base boxes

- [vmware-samples/packer-examples-for-vsphere](https://github.com/vmware-samples/packer-examples-for-vsphere) - Examples
  to automate the creation of virtual machine images and their guest operating systems on VMware vSphere using HashiCorp Packer
  and the Packer Plugin for VMware vSphere (vsphere-iso).

- [Parallels/packer-examples](https://github.com/parallels/packer-examples) - Examples in how to use Packer with Parallels Desktop
  to automate the creation of virtual machine images and their guest operating systems on macOS, windows and linux.

## Wrappers

- [packer-config](https://github.com/ianchesal/packer-config) - a Ruby model that lets you build Packer configurations in Ruby
- [packerlicious](https://github.com/mayn/packerlicious) - a Python library for generating Packer templates
- [packer.py](https://github.com/mayn/packer.py) - a Python library for executing Packer CLI commands
- [racker](https://github.com/aspring/racker) - an opinionated Ruby DSL for generating Packer templates

## Other

- [suitcase](https://github.com/tmclaugh/suitcase) - Packer based build system for CentOS OS images
